# ChangeLog for app-emulation/dynamips
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/dynamips/ChangeLog,v 1.10 2013/08/25 14:32:16 pinkbyte Exp $

  25 Aug 2013; Sergey Popov <pinkbyte@gentoo.org>
  -dynamips-0.2.8_rc2-r1.ebuild, dynamips-0.2.8_rc3.ebuild,
  dynamips-0.2.8.ebuild, -files/dynamips-0.2.8_rc2-makefile.patch:
  Fix dependency on dev-libs/elfutils, wrt bug #480940. Drop old revision

  15 Jul 2013; Sergey Popov <pinkbyte@gentoo.org>
  +files/dynamips-0.2.8-makefile.patch:
  Add missing makefile patch

*dynamips-0.2.8 (15 Jul 2013)

  15 Jul 2013; Sergey Popov <pinkbyte@gentoo.org> +dynamips-0.2.8.ebuild:
  Version bump, wrt bug #476708. EAPI 5, enable verbose build, get rid of base
  eclass, respect compiler

  15 Jul 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Add myself as primary maintainer, permission granted by Tony Vroon

  05 May 2012; Peter Volkov <pva@gentoo.org> dynamips-0.2.8_rc3.ebuild:
  Update HOMEPAGE.

*dynamips-0.2.8_rc3 (17 May 2011)

  17 May 2011; Tony Vroon <chainsaw@gentoo.org> +dynamips-0.2.8_rc3.ebuild,
  +files/dynamips-0.2.8_rc3-makefile.patch:
  Version bump to the GNS3 community release. All the hard patching work done
  by Jan Bednar in bug #365049; ported to EAPI=3.

  17 Oct 2010; <chainsaw@gentoo.org>
  files/dynamips-0.2.8_rc2-makefile.patch:
  Patch rediffed as per feedback by Samuli Suominen.

*dynamips-0.2.8_rc2-r1 (17 Oct 2010)

  17 Oct 2010; <chainsaw@gentoo.org> -dynamips-0.2.8_rc2.ebuild,
  +dynamips-0.2.8_rc2-r1.ebuild, files/dynamips-0.2.8_rc2-makefile.patch:
  Instill LDFLAGS respect into upstream Makefile. Closes bug #338169 by
  Diego Elio "Flameeyes" Pettenò.

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> dynamips-0.2.8_rc2.ebuild:
  Add ~x86 wrt #281315

*dynamips-0.2.8_rc2 (07 Aug 2009)

  07 Aug 2009; <chainsaw@gentoo.org> +dynamips-0.2.8_rc2.ebuild,
  +files/dynamips-0.2.8_rc2-makefile.patch, +metadata.xml: