@@ -5,18 +5,19 @@ AUX dynamips-0.2.8-makefile.patch 2639 SHA256 6c72cbb630e01bcd34b265b2208fda3b46
 AUX dynamips-0.2.8_rc3-makefile.patch 3057 SHA256 2881ccf2aad32e1adf3cd1f92e28f0671bdf9d79191a2c7bb887149bbc6615e6 SHA512 0e5a4184e935165490aa00bf825d2c4b99fc2b7771b6b2727b4e8f3e1d80dc8552ba5f240f7e4a3fee88a2bf0ed146f67c1ffab59c3d928d18e85724595c7513 WHIRLPOOL df651f0a655511f5b724b2fb83e6e5dc0018cfad2a2204f57bec0e14e7580cab81f4fbd9cd4e2ffd354f2018683a77528c74b0ccac06a662ad41aae6a30fb4e1
 DIST dynamips-0.2.8-RC3-community.tar.gz 818199 SHA256 e808a50b6b9d24a90604885f90699f46b26a49e6ce9cf542aa288f135b2508ac SHA512 8c6eee6b69fef204a3ac4d54c40e915a37fd67edc3be9bd4070f4953abfe683fe6e0c2d65aad6946fb893345c08a7569c27fd183d3a8762e1128be3daf769762 WHIRLPOOL b2441b01a8151bf8f4cbf297e57ea44ec59c66066689e37e416f7a7734fa648ee7e829b7622c5aa658648cd7fddc83c0cca635e64b31fa6efbffa8549ff3781d
 DIST dynamips-0.2.8-community.source.zip 959832 SHA256 e0735995cb2d634bb5b010e216c003e19975e819d3ebc1b6749470d0bde8240d SHA512 a7757d9c0eac76772cd6df39fd862e9cf5017fce55b3885b9877ce67580277c51b8d51dda458275a64197bea0c4db3a5ce32c68a229eb39b25bb42f0284b3efa WHIRLPOOL 8740b0c4fc1df24bf7b35f3909a3883ff398bab39584baf89364c50bdf9263739d45f77ab7df6349b2f1f582f833f5edc22c0e0e0a949bc34071830d988e7cd6
+EBUILD dynamips-0.2.8-r1.ebuild 1190 SHA256 20dce26e7a8947207ed5bae69231da8906aa7f52f8c5911e5de68ee326fad4cc SHA512 c080529a7405edcf3153003067985c256f5a166f2e47d37d71aff4fabc498fd7d32ed259d4beef249f252f6d48f5708858d0706db3e4ec78da93722fedebd12b WHIRLPOOL 04767adf9b6ae70867b8e7e1795ace95cc17087a04cf9ae46d23aebacf77717ef838b38d29661685884723a76e440684886a7da88223b5fefbe6e455e99d2bbe
 EBUILD dynamips-0.2.8.ebuild 1100 SHA256 bbf66c07ed1ab75369f571d0c5cadb7904ce458d0d46ec02d799d54d03209434 SHA512 b7b41bca6c0c19cab2fd31d8effdbb5d9feb9e8594fc535722054e8200ce5ce6d1da69683696cdde0d6ad1600147b07a80422ad26da87b2660858cdaac8e553c WHIRLPOOL d5c2da6a3f53549030cf63b431d42c20ae85f95f7977d4b4aa8834b5b83d90c546c34d2bd74ffdade67b54892fbeab58b97114cc346933f4cfaa522ec589764a
 EBUILD dynamips-0.2.8_rc3.ebuild 1775 SHA256 c084a9b2c8fcabf311f4ea311fed56c37aec995a0dd5dacc5d99dad0484a8570 SHA512 326b0a1a66c39215096a74ecbddcec8ee0e3cf7b69e543ba6481683b537afbb676af555a5b6b01c86dbcc9c6b2831c7c1c30f4b79adea84723dbb626c4635a87 WHIRLPOOL 2bad699cf12ec09e47ea9191fe2427c61b7b94ca5fadd658dcc452c185d147796081cec75cec8a2965c4a4170b9bde4f187de847797da8c72a04732a497aa9ae
-MISC ChangeLog 2198 SHA256 4c27ca4be5921d357427bd192d7c222fc4703efc59bf79f759a86bc7c761158d SHA512 bff8e501397fe662dd06d127e0c73af947a2629b8e6370f483676b09a9919642682a3a4d39945c5fc46051c264bf8b32db712ad81d7b482bda0cce1b64a25f17 WHIRLPOOL 2fe79bafc3d815846a33ef206e057f757cbb52660caf2379d49e3adf54888e00a4e77ac4c6bf0ea8167074fde6acb774e92c79f68a2a095dd34ce374d8f1cc3b
+MISC ChangeLog 2429 SHA256 7b549e0147611b9366cb092db0f93763b973cd381d32627f21f4d869ea3ff76b SHA512 0ffe3f8fd40dd973e843e343f4ccd6c81b733eeb9e4b06291f59f61698a23ec54ffd3b96e30a49c4985abc275c5fdc07e08e0309bff8d35102b5a731a252ad23 WHIRLPOOL 57d35b4c2f6ea3ee7713add2baa5f85d7d3ba7511d16795489bc0dadf0276a3daa209de6ff1f64cd834ac529cd2d0f0f5d96a7c95af756a19e1d373ddb14cc41
 MISC metadata.xml 317 SHA256 8746edc9aae0113798d2e985befb7ea5e99b5822e660ff059b75784c727163a7 SHA512 11077591e3616bcafd58ca67976ba3c5b00748ff341ec3d04e473ec43666cbbaf90500814066b9d9cc15ea547b25c1d5038de1512bf403df927a7bca1cbc845d WHIRLPOOL fd726e4129625d250e4c03f1c3f7171a27f1e2fc1ac4b8534cc95ee1e80f51c2c0faf0afe61e2b6127100b63fa680afb6a0ad822bf026273dc5f9f756452a5cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSGhV1AAoJECo/aRed9267R40IAMk7xYtBJbBJkD0UbugKjjyP
-GSB/K5RHOxUBxINinqvPx8pwZo8YxDX3lwZA3UH5xd+bRp4EIe/iQSUdhZ8rkezS
-vFnYbK7r4yPq1dO6QOH3nMxg4WCYFDE0iLMPGMPsNyMOefMfzVGcwSCgjRLM+W0+
-c9eaLOa6IyrHMrTzVGcg6j2rvb483BaexU8uLCBLLeFM9cIjgIFIVY4SSspo0gzp
-NVu0O7fJKMKPg207T3N0QfNO9GFmsLQ7cZfjCD0LURhN7V+ESwu/Z2RehvDD3h45
-Z/T6eiOk3pVftnJE8EExTFrMHi33O1sNtAD6BH+pIuHRWjPFYdFl19U7Qpv09YI=
-=QqcA
+iQEcBAEBCAAGBQJSGhnUAAoJECo/aRed9267tHQH/3bqEOTaKyHACdrTPfHjaaSJ
+G52gIk078Adu2ypPScKs2Vace0/rxRxlGFjohuBzHag/niuZFfv6q9UVyIdJIzOu
+W5qMkcNIqDGPzG76d0/IGpjE3udJMpS5nqK3S+WT482bd9mFW+51DcyLLx6FVwCR
+IQkCYqlo566QecnsC/ERU4qZp0fGdgt7XmHt3ydTiw9z03+guo4gz6VXZD/uH2ve
+U4D0xs1RCRzegnT9bCGqfv+/Nv4+PtxJ474jsr1I4QhyYtsPwJsznfeJMVxFKw7E
+1ugEQUZdafvEfuzOhkbr4zi70tITP6kYkF4eHz+7an70o3T9zno5ZltsyNY3MnU=
+=umTD
 -----END PGP SIGNATURE-----
