@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/dynamips
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/dynamips/ChangeLog,v 1.10 2013/08/25 14:32:16 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/dynamips/ChangeLog,v 1.11 2013/08/25 14:51:00 pinkbyte Exp $
+
+*dynamips-0.2.8-r1 (25 Aug 2013)
+
+  25 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> +dynamips-0.2.8-r1.ebuild:
+  Revision bump: do not link to libelf statically, wrt bug #480940. Thanks to
+  James Cloos for discovering this issue
 
   25 Aug 2013; Sergey Popov <pinkbyte@gentoo.org>
   -dynamips-0.2.8_rc2-r1.ebuild, dynamips-0.2.8_rc3.ebuild,
